# elyria

./: .gitignore  pyproject.toml  requirements.txt
data/: animations.json  textures.json
data/animations/: player.json
data/animations/player/: player_base_idle.json  player_base_walk.json  player_hand_idle.json  player_hand_walk.json  player_medium_hair_brown_idle.json  player_medium_hair_brown_walk.json  player_shirt_green_idle.json  player_shirt_green_walk.json
data/maps/: map.tmx
data/textures/: layers.json  player.json  ui.json
data/textures/player/: player_base.json  player_hand.json  player_medium_hair_brown.json  player_shirt_green.json
elyria/: animation_manager.py  entity.py  game.py  groups.py  logger.py  main.py  player.py  singleton.py  sprites.py  texture_manager.py  world.py
elyria/core/: game.py  logger.py  settings.py  utils.py
elyria/entities/: entity.py  player.py
elyria/graphics/: animation.py  animation_manager.py  sprites.py  texture_manager.py
elyria/network/: abstract_handler.py  gameclient.py  handler.py
elyria/network/handlers/: login_handler.py  move_handler.py
elyria/ui/: hotbar.py
elyria/world/: groups.py  world.py
scripts/: add_line_to_spritesheet.py  build.bat  build.sh  generate_red_square.py
server/: abstract_handler.py  gameserver.py  handler.py  main.py  player.py  server.py  settings.py  sprites.py  world.py
server/dashboard/: __init__.py  pages.py  root.py
server/handlers/: move_handler.py
server/models/: __init__.py  player_model.py
server/tools/: pickle_viewer.py
(+2 files in other folders)
